# bot

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Containerfile  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  make.ps1  pyproject.toml  requirements.in  requirements.txt
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: container-build-push.yaml  dependency-review.yaml  docker-build-push.yaml  image-build-push.yaml  lint-test.yaml  precommit-autoupdate.yaml  python-ci.yaml  sentry-release.yaml  sentry-release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 1079afefcaef_create_reminders_table.py
docs/source/: changelog.rst  conf.py  index.rst
requirements/: requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements-tests.in  requirements-tests.txt  requirements.in  requirements.txt
src/bot/: __init__.py  __main__.py  bot.py  constants.py  converters.py  dragonfly_services.py  errors.py  log.py
src/bot/database/: __init__.py  models.py
src/bot/database/mixins/: timestamp.py
src/bot/db/: models.py
src/bot/exts/: __init__.py  audit.py  pypi.py  rdap.py  reminder.py  webhook.py
src/bot/exts/core/: __init__.py  error_handler.py  log.py  ping.py  startup_notify.py  sync.py
src/bot/exts/core/internal_eval/: __init__.py  _helpers.py  _internal_eval.py
src/bot/exts/dragonfly/: __init__.py  _api.py  _builders.py  _views.py  dragonfly.py  subscribe.py  threat_intel_feed.py
src/bot/exts/utilities/: __init__.py  internal.py
src/bot/pypi/: __init__.py  pypi.py
src/bot/templates/: email_template.jinja2  malicious_pypi_package_email.jinja2
src/bot/utils/: __init__.py  checks.py  commands.py  decorators.py  exceptions.py  extensions.py  function.py  helpers.py  lock.py  mailer.py  messages.py  microsoft.py  paginator.py  pastebin.py  rdap.py  services.py  templates.py  time.py
tests/: test_dragonfly_services.py  test_smoke.py
