[project]
name = "bot"
version = "5.0.0"
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
repository = "https://github.com/vipyrsec/bot/"
documentation = "https://docs.vipyrsec.com/bot/"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.dependencies]
file = ["requirements/requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements/requirements-dev.txt"] }
tests = { file = ["requirements/requirements-tests.txt"] }
docs = { file = ["requirements/requirements-docs.txt"] }

[tool.ruff]
preview = false
unsafe-fixes = true
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY001", # (Missing copyright notice at top of file)
    "G004", # (Logging statement uses f-string) - Developer UX
    "S101", # (Use of `assert` detected) - This should probably be changed
    "PLR6301", # (Method `x` could be a function, class method, or static method) - false positives
    "ANN101", # (Missing type annotation for `cls` in method) - Also for `self`; this just adds noise
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
]
"tests/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Tests are not modules
    "S101", # (Use of `assert` detected) - Yes, that's the point
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[[tool.mypy.overrides]]
module = [
    "coloredlogs",
    "pydis_core.*"
]
ignore_missing_imports = true

[tool.coverage.run]
source = [
    "bot",
]
