[project]
name = "bot"
version = "5.0.0"
requires-python = ">=3.11,<3.12.dev0"
license = {text = "MIT"}
dependencies = [
  # Core
  "discord-py==2.3.2",
  "pydis-core==10.7.0",
  "aiohttp==3.10.9",
  "pydantic==2.6.0",
  "pydantic-settings==2.2.1",
  # Logging
  "sentry-sdk==2.15.0",
  "rapidfuzz==3.6.1",
  "coloredlogs==15.0.1",
  # Database
  "psycopg[binary]==3.1.18",
  "SQLAlchemy==2.0.27",
  # Extensions
  ## exts/utilities/internal
  "arrow==1.3.0",
]

  [project.optional-dependencies]
  pre-commit = ["pre-commit==3.6.2"]
  pyright = ["pyright==1.1.385"]
  ruff = ["ruff==0.3.4"]

  docs = ["sphinx==7.2.6", "furo==2024.1.29", "sphinx-autoapi==3.0.0", "releases==2.1.1"]
  tests = ["pytest==8.3.3", "pytest-randomly==3.15.0"]

  [project.urls]
  repository = "https://github.com/vipyrsec/bot/"
  documentation = "https://docs.vipyrsec.com/bot/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
format = "ruff format"
lint = "ruff check --fix"
type-check = "pyright"
pre-commit = "pre-commit run --all-files"
test = "pytest"
all = {composite = ["format", "lint", "type-check", "test"]}

[tool.pyright]
include = ["src/**/*.py"]

venvPath = "."
venv = ".venv"

[tool.ruff]
preview = false
unsafe-fixes = true
target-version = "py311"
line-length = 120

  [tool.ruff.lint]
  select = ["ALL"]
  ignore = [
    "CPY001",  # (Missing copyright notice at top of file)
    "G004",    # (Logging statement uses f-string) - Developer UX
    "S101",    # (Use of `assert` detected) - This should probably be changed
    "PLR6301", # (Method `x` could be a function, class method, or static method) - false positives
    "ANN101",  # (Missing type annotation for `cls` in method) - Also for `self`; this just adds noise
  ]

    [tool.ruff.lint.extend-per-file-ignores]
    "docs/*" = [
      "INP001", # (File `docs/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
    ]
    "tests/*" = [
      "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Tests are not modules
      "S101",   # (Use of `assert` detected) - Yes, that's the point
    ]

    [tool.ruff.lint.pydocstyle]
    convention = "numpy"

[tool.coverage.run]
source = ["bot"]
